[package]
name = "inti-e3m"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-tungstenite = "*"
tokio-serial = "5.4.5"
thiserror = "2.0.12"
futures-util = "0.3.31"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm", "unstable-rendered-line-info"] }
color-eyre = "0.6.3"
tui-framework-experiment = "0.4.0"
tui-logger = "0.17.4"
log = "0.4.28"